@@ -1,7 +1,10 @@
 # ChangeLog for gnome-base/gnome-desktop
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.5 2002/06/10 14:03:10 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.6 2002/06/17 18:54:42 stroke Exp $
 
+*gnome-desktop-2.0.1 (17 Jun 2002)
+  17 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> gnome-desktop-2.0.1.ebuild :
+  New version, deps updated. 
 
 *gnome-desktop-2.0.0 (10 Jun 2002)
   10 Jun 2002; Spider <spider@gentoo.org> gnome-desktop-2.0.0.ebuild :
